# hdc

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile
lib/: CMakeLists.txt  hdc.c  hdc.h
test/: CMakeLists.txt  test_hdc.c  test_hdc_unit.c  unity.c  unity.h  unity_config.h  unity_internals.h
